// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden plan > compiles the 50-position fixture to a stable program 1`] = `
{
  "aggKeys": [
    "1010|610000",
    "1010|611000",
    "1010|620000",
    "1010|621000",
    "1010|622000",
    "1010|623000",
    "1010|624000",
    "1010|625000",
    "1010|630000",
    "1010|972000",
    "1010|972540",
    "1010|971000",
    "1010|612000",
    "1010|626000",
    "1010|627000",
    "1010|628000",
    "1010|628100",
    "1010|628150",
    "1010|628200",
    "1010|628400",
    "1010|628500",
    "1010|628600",
    "1010|628300",
    "1010|971100",
    "1010|629000",
    "1010|629100",
    "1010|629200",
    "1010|629300",
    "1310|610000",
    "1310|611000",
    "1310|620000",
    "1310|621000",
    "1310|622000",
    "1310|623000",
    "1310|624000",
    "1310|625000",
    "1310|630000",
    "1310|972000",
    "1310|972540",
    "1310|971000",
    "1310|612000",
    "1310|626000",
    "1310|627000",
    "1310|628000",
    "1310|628100",
    "1310|628150",
    "1310|628200",
    "1310|628400",
    "1310|628500",
    "1310|628600",
    "1310|628300",
    "1310|971100",
    "1310|629000",
    "1310|629100",
    "1310|629200",
    "1310|629300",
    "1910|610000",
    "1910|611000",
    "1910|620000",
    "1910|621000",
    "1910|622000",
    "1910|623000",
    "1910|624000",
    "1910|625000",
    "1910|630000",
    "1910|972000",
    "1910|972540",
    "1910|971000",
    "1910|612000",
    "1910|626000",
    "1910|627000",
    "1910|628000",
    "1910|628100",
    "1910|628150",
    "1910|628200",
    "1910|628400",
    "1910|628500",
    "1910|628600",
    "1910|628300",
    "1910|971100",
    "1910|629000",
    "1910|629100",
    "1910|629200",
    "1910|629300",
  ],
  "arg0": "3750:6d6d43c7",
  "buyoutAggRow": "0:811c9dc5",
  "buyoutValues": "0:811c9dc5",
  "countScaled": [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
  ],
  "daysPerMonth": "600:c14af285",
  "defCount": 28,
  "defsInEmissionOrder": [
    "def-base",
    "def-accrual",
    "def-pension",
    "def-indemnity",
    "def-housing",
    "def-transport",
    "def-custom",
    "def-overtime",
    "def-ss",
    "def-hc",
    "def-fte",
    "def-hours",
    "def-bankhol",
    "def-flatmonthly",
    "def-vacweighted",
    "def-multdays",
    "def-multrealdays",
    "def-multholdays",
    "def-multvac",
    "def-multservice",
    "def-multservicetotal",
    "def-weightedservice",
    "def-multhours",
    "def-hourspaid",
    "def-combadd",
    "def-combsub",
    "def-combmul",
    "def-costperhour",
  ],
  "holidayDays": "12:5d2a2798",
  "instructionCount": 3750,
  "lineAggRow": "1400:b5d9f179",
  "lineCount": 1400,
  "op": "3750:1adf3057",
  "outLine": "3750:ddeee855",
  "paramOfs": "3750:76a8a866",
  "paramPool": "8050:735dc906",
  "paramPoolLength": 8050,
  "posFte": "50:a2433b05",
  "posHeadcount": "50:66ecb630",
  "posWeight": "50:0a07af35",
  "positionCount": 50,
  "positionInstrStart": "51:08cb068d",
  "positionStatRow": "50:6d472703",
  "realDays": "12:718c5713",
  "seasonality": "600:ca85a0d7",
  "statKeys": [
    "F&B|Manager Salaried Pay",
    "Admin|Casual Hourly Pay",
    "Admin|Associate Hourly Pay",
    "Rooms|Manager Salaried Pay",
    "Rooms|Casual Hourly Pay",
    "F&B|Associate Hourly Pay",
    "Rooms|Associate Hourly Pay",
    "F&B|Casual Hourly Pay",
    "Admin|Manager Salaried Pay",
  ],
}
`;

exports[`golden plan > compiles the 200-position fixture to a stable program 1`] = `
{
  "aggKeys": [
    "1010|610000",
    "1010|611000",
    "1010|620000",
    "1010|621000",
    "1010|622000",
    "1010|623000",
    "1010|624000",
    "1010|625000",
    "1010|630000",
    "1010|972000",
    "1010|972540",
    "1010|971000",
    "1010|612000",
    "1010|626000",
    "1010|627000",
    "1010|628000",
    "1010|628100",
    "1010|628150",
    "1010|628200",
    "1010|628400",
    "1010|628500",
    "1010|628600",
    "1010|628300",
    "1010|971100",
    "1010|629000",
    "1010|629100",
    "1010|629200",
    "1010|629300",
    "1310|610000",
    "1310|611000",
    "1310|620000",
    "1310|621000",
    "1310|622000",
    "1310|623000",
    "1310|624000",
    "1310|625000",
    "1310|630000",
    "1310|972000",
    "1310|972540",
    "1310|971000",
    "1310|612000",
    "1310|626000",
    "1310|627000",
    "1310|628000",
    "1310|628100",
    "1310|628150",
    "1310|628200",
    "1310|628400",
    "1310|628500",
    "1310|628600",
    "1310|628300",
    "1310|971100",
    "1310|629000",
    "1310|629100",
    "1310|629200",
    "1310|629300",
    "1910|610000",
    "1910|611000",
    "1910|620000",
    "1910|621000",
    "1910|622000",
    "1910|623000",
    "1910|624000",
    "1910|625000",
    "1910|630000",
    "1910|972000",
    "1910|972540",
    "1910|971000",
    "1910|612000",
    "1910|626000",
    "1910|627000",
    "1910|628000",
    "1910|628100",
    "1910|628150",
    "1910|628200",
    "1910|628400",
    "1910|628500",
    "1910|628600",
    "1910|628300",
    "1910|971100",
    "1910|629000",
    "1910|629100",
    "1910|629200",
    "1910|629300",
  ],
  "arg0": "15000:6e641743",
  "buyoutAggRow": "0:811c9dc5",
  "buyoutValues": "0:811c9dc5",
  "countScaled": [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
  ],
  "daysPerMonth": "2400:e920abc5",
  "defCount": 28,
  "defsInEmissionOrder": [
    "def-base",
    "def-accrual",
    "def-pension",
    "def-indemnity",
    "def-housing",
    "def-transport",
    "def-custom",
    "def-overtime",
    "def-ss",
    "def-hc",
    "def-fte",
    "def-hours",
    "def-bankhol",
    "def-flatmonthly",
    "def-vacweighted",
    "def-multdays",
    "def-multrealdays",
    "def-multholdays",
    "def-multvac",
    "def-multservice",
    "def-multservicetotal",
    "def-weightedservice",
    "def-multhours",
    "def-hourspaid",
    "def-combadd",
    "def-combsub",
    "def-combmul",
    "def-costperhour",
  ],
  "holidayDays": "12:45e13465",
  "instructionCount": 15000,
  "lineAggRow": "5600:55c2ac85",
  "lineCount": 5600,
  "op": "15000:36a06cad",
  "outLine": "15000:7bcdc71e",
  "paramOfs": "15000:f32c1692",
  "paramPool": "32200:58b1863e",
  "paramPoolLength": 32200,
  "posFte": "200:1b3dc096",
  "posHeadcount": "200:9321ff50",
  "posWeight": "200:874d818d",
  "positionCount": 200,
  "positionInstrStart": "201:6c37f9d0",
  "positionStatRow": "200:af1a7bc8",
  "realDays": "12:08801541",
  "seasonality": "2400:d0b11e01",
  "statKeys": [
    "Rooms|Manager Salaried Pay",
    "Admin|Manager Salaried Pay",
    "Rooms|Associate Hourly Pay",
    "F&B|Associate Hourly Pay",
    "F&B|Casual Hourly Pay",
    "Admin|Associate Hourly Pay",
    "Rooms|Casual Hourly Pay",
    "F&B|Manager Salaried Pay",
    "Admin|Casual Hourly Pay",
  ],
}
`;
